FIX: small visual glitch on Safari and Chrome on OSX.
FEAT: added Weibo button.

--- a/static/app.css
+++ b/static/app.css
@@ -69,7 +69,6 @@ header menu li a img {
 h2 {
   font-weight: 200;
   font-size: 26px;
-  line-height: 30px;
   padding: 15px 0;
   margin: 0;
   color: #eee;
